refactor: enhance schema recall (#108)
* refactor: enhance schema recall
- adjust workflow before plannerNode
- call hybrid search in AgentVectorStoreService
- add aop for log
- clean unsed code

* clean unsed node

* feat: adapt flux output

* add semantic support

* fix: python bug

* fix unit test

* fix TableRelationDispatcher unit test

* fix method buildBusinessKnowledgePrompt

* delete unused code

* add metadata constant

* add semantic support

* update semantic crud cotroller

* fix MappersTest.java

* feat: add semantic frontend

* fix bugs

* feat: add search text-edit

* fix: bugs in schema.sql

* adjust semantic and business knowledge

* adjust by copilot feedback

* fix MapperTest type error.

* refactor: workflow

* chore update README.md

---------

Co-authored-by: VLSMB <2047857654@qq.com>
Co-authored-by: VLSMB <36068250+VLSMB@users.noreply.github.com>